java 9 and 10 startup from jar file in docs
fixes #109