@@ -23,7 +23,10 @@ You can install and run Otoroshi with this little bash snippet
 wget -q --show-progress 'https://dl.bintray.com/maif/binaries/otoroshi.jar/1.1.1/otoroshi.jar'
 # run the following line if you want to use the admin UI in your browser
 sudo echo "127.0.0.1    otoroshi-api.foo.bar otoroshi.foo.bar otoroshi-admin-internal-api.foo.bar" >> /etc/hosts
+# Java 8
 java -jar otoroshi.jar
+# Java 9 and 10
+java --add-modules java.xml.bind -jar otoroshi.jar
 ```
 
 or using docker
